feat: setup adr's for test builders and test method naming convetion. Add new tests to increase test coverage