@@ -1,6 +1,7 @@
 package com.pullrequesttracker.application.dto;
 
 import java.time.Instant;
+import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 
@@ -9,6 +10,7 @@ public record CodeRepositoryStatisticsDto(UUID codeRepositoryId, PullRequestStat
         List<RecentActivityEntryDto> recentActivity, Instant calculatedAt) {
     public static CodeRepositoryStatisticsDto empty(UUID codeRepositoryId, Instant calculatedAt) {
         return new CodeRepositoryStatisticsDto(codeRepositoryId, PullRequestStatisticsDto.empty(),
-                ContinuousIntegrationStatisticsDto.empty(), ReviewStatisticsDto.empty(), List.of(), calculatedAt);
+                ContinuousIntegrationStatisticsDto.empty(), ReviewStatisticsDto.empty(), Collections.emptyList(),
+                calculatedAt);
     }
 }
