@@ -11,6 +11,7 @@ import org.springframework.stereotype.Component;
 
 import java.time.Duration;
 import java.time.Instant;
+import java.util.Collections;
 import java.util.List;
 
 import static dev.tamboui.toolkit.Toolkit.column;
@@ -35,7 +36,7 @@ public class TokenList {
     }
 
     public TokenDto getSelectedToken() {
-        List<TokenDto> tokens = state.get(TokenManagerState.TOKENS).getOrElse(List.of());
+        List<TokenDto> tokens = state.get(TokenManagerState.TOKENS).getOrElse(Collections.emptyList());
         if (tokens.isEmpty())
             return null;
         int index = listElement.selected();
@@ -43,7 +44,7 @@ public class TokenList {
     }
 
     public Element render() {
-        List<TokenDto> tokens = state.get(TokenManagerState.TOKENS).getOrElse(List.of());
+        List<TokenDto> tokens = state.get(TokenManagerState.TOKENS).getOrElse(Collections.emptyList());
         if (tokens.isEmpty()) {
             return panel(text("No tokens configured. Press c to create one.").dim()).fill().focusable()
                     .focusedBorderColor(Color.CYAN);
