@@ -8,6 +8,7 @@ import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
 
+import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.CompletableFuture;
 
@@ -30,7 +31,7 @@ public class CheckRepositoriesTest {
 
     @Test
     void execute_whenNoRepositoriesExist_shouldNotSynchronizeAnyRepository() {
-        when(codeRepositoryRepository.findAll()).thenReturn(List.of());
+        when(codeRepositoryRepository.findAll()).thenReturn(Collections.emptyList());
 
         checkRepositories.execute();
 
